Updated client and configuration file

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 base de dades:
     motor: mysql
-    host: localhost
-    user: dam_app
-    password: '1234'
-    database: botiga
+    host: "localhost"
+    user: "dam_app"
+    password: "1234"
+    database: "botiga"
+    port: "3306"
