--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 base de dades:
     motor: mysql
-    host: "localhost"
-    user: "dam_app"
-    password: "1234"
-    database: "botiga"
-    port: "3306"
+    host: localhost
+    user: dam_app
+    password: '1234'
+    database: botiga
+    port: 3306
